@@ -1,3 +1,8 @@
+2006-02-24  Wu Zhou  <woodzltc@cn.ibm.com>
+
+	* gdb.fortran/derived-type.f90: New file.
+	* gdb.fortran/derived-type.exp: New testcase.
+
 2006-02-23  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.base/default.exp: Allow ';' as a directory separator.
